--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/react-slick": "^1.1.2",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
+    "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.5",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
