--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@ant-design/react-slick": "^1.1.2",
+    "@contentful/rich-text-react-renderer": "^15.22.1",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
+    "contentful": "^10.12.8",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -21,9 +23,12 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@contentful/rich-text-types": "^16.6.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cf-content-types-generator": "^2.15.3",
+    "contentful-cli": "^3.3.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
