--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
     "contentful": "^10.12.8",
+    "fs": "^0.0.1-security",
     "next": "14.2.4",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
+    "resend": "^3.4.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
