--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-multi-carousel": "^2.8.5",
     "resend": "^3.4.0",
     "zustand": "^4.5.4"
