--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
     "contentful": "^10.12.8",
+    "framer-motion": "^11.3.21",
     "fs": "^0.0.1-security",
     "next": "14.2.4",
     "path": "^0.12.7",
